# Physarum

./: .gitattributes  CMakeLists.txt  README.md
include/: FileReader.h  Object.hpp
include/GLSL/: Program.hpp  Project.hpp  Shader.hpp
libs/: Libraries.cmake
libs/imgui/: CMakeLists.txt
shaders/: Agent.glsl  Agents.comp  Common.glsl  Decay.comp  Decay.glsl  Diffuse.comp  Diffuse.glsl  Fragment.glsl  Move.glsl  Navigate.comp  Navigate.glsl  PrepareSaveImage.glsl  Random.glsl  Sensor.glsl  UpdateSimulationParameters.comp
src/: CMakeLists.txt  FileReader.cpp  Main.cpp  Object.cpp
src/GLSL/: Program.cpp  Project.cpp  Shader.cpp
